--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
-    "marked": "^9.1.6"
+    "marked": "^9.1.6",
+    "fuse.js": "^7.0.0"
   }
 }
