--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ kramdown:
 
 # SEO settings
 google_analytics: "UA-XXXXXXXX-X"
-disqus_shortname: "your-disqus-shortname"
+disqus_shortname: "techshare-blog"
 
 # Social media settings for SEO and sharing
 social:
@@ -88,6 +88,23 @@ defaults:
       layout: "default"
       image: "/assets/images/default-site-image.jpg"
 
+# Comments configuration
+comments:
+  provider: "disqus"  # disqus, utterances, giscus
+  disqus:
+    shortname: "techshare-blog"
+  utterances:
+    repo: "yourusername/yourusername.github.io"
+    issue_term: "pathname"
+    theme: "github-light"
+  giscus:
+    repo: "yourusername/yourusername.github.io"
+    repo_id: "your-repo-id"
+    category: "General"
+    category_id: "your-category-id"
+    mapping: "pathname"
+    theme: "light"
+
 # Social sharing
 social_share: true
 
@@ -96,6 +113,20 @@ reading_time: true
 
 # Table of contents
 toc: true
+
+# Series/Collections configuration
+collections:
+  series:
+    output: true
+    permalink: /series/:name/
+
+# Series defaults
+defaults:
+  - scope:
+      path: ""
+      type: "series"
+    values:
+      layout: "series"
 
 # Exclude from processing
 exclude:
