--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-blog",
+  "name": "jekyll-blog-vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,12 +8,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "marked": "^11.1.1",
-    "prismjs": "^1.29.0",
-    "date-fns": "^3.0.6"
-  },
   "devDependencies": {
-    "vite": "^5.0.8"
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
+    "marked": "^9.1.6"
   }
 }
