--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,33 @@
 name: Deploy Hexo Site
 
-# 触发条件：当 source 分支有 push 操作时触发
 on:
   push:
     branches:
-      - source
+      - main # 源分支
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 步骤1: 拉取你的源代码 (从 source 分支)
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: source
-          submodules: true
+          submodules: true # 如果主题是子模块，需要这个
 
-      # 步骤2: 设置 Node.js 环境
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: '18' # 使用一个稳定的 Node.js 版本
 
-      # 步骤3: 安装依赖
       - name: Install Dependencies
         run: npm install
 
-      # 步骤4: 生成静态文件
       - name: Build
         run: hexo generate
 
-      # 步骤5: 部署到 main 分支
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: main
           publish_dir: ./public
-          force_orphan: true
+          # publish_branch: gh-pages # 默认就是 gh-pages
