!commit! Update on 周五-2025-08 01:15

--- a/_config.yml
+++ b/_config.yml
@@ -102,3 +102,7 @@ theme: butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
+deploy:
+  type: git
+  repo: https://github.com/zjncs/zjncs.github.io.git
+  branch: main
