!commit! Update on 周五-2025-08 01:16

--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,21 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: butterfly
 
+comment:
+  enable: true
+  type: giscus
+  giscus:
+    repo: "zjncs/zjn-blog-comments"
+    repoId: "R_kgDOPVdIdg"
+    category: "Announcements"
+    categoryId: "DIC_kwDOPVdIds4CtlzW"
+    mapping: "pathname"
+    strict: false
+    reactionsEnabled: true
+    emitMetadata: false
+    inputPosition: "bottom"
+    theme: "noborder_light"
+    lang: "zh-CN"
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
