!commit! Update on 周五-2025-08 01:17

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -24,3 +24,7 @@ aside:
     author: Johnny-Zhao
     # 作者描述或签名
     description: Attention is all you need.
+# _config.butterfly.yml
+inject:
+  head:
+    - <link rel="stylesheet" href="/css/custom.css">
