!commit! Update on 周五-2025-08 01:18

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,30 +1,47 @@
+# ==========================================================
+# 您的Butterfly主题最终配置文件
+# ==========================================================
+
+# --- 首页配置 ---
 # 首页封面图
 index_img: /img/carousel.jpg
-# 文章列表的样式
+
+# 文章列表的样式 (card/masonry)
 post_list:
   style: card
 
-# -----------------
-# 社交链接（顶层配置）
-# 这里是控制侧边栏和页脚社交图标的地方
-# -----------------
+# --- 社交链接 ---
+# 用于侧边栏和页脚
 social:
   fab fa-github: https://github.com/zjncs || Github
   fas fa-envelope: mailto:zhaojianing@tju.edu.cn || Email
 
-# -----------------
-# 侧边栏配置
-# -----------------
+# --- 侧边栏配置 (问题的核心) ---
 aside:
+  # 总开关，必须为 true
+  enable: true
+  # 侧边栏在右侧
+  position: right
+  # 移动端显示侧边栏按钮
+  mobile: true
+  # 显示所有侧边栏内容（文章归档、标签、分类）
+  display:
+    archive: true
+    tag: true
+    category: true
+  # 作者信息卡片
   card_author:
     enable: true
-    # 作者头像
     avatar: /img/avatar.png
-    # 作者昵称
     author: Johnny-Zhao
-    # 作者描述或签名
     description: Attention is all you need.
-# _config.butterfly.yml
+
+# --- 自定义文件注入 ---
+# 用于加载您自己的 CSS 或 JS
 inject:
   head:
     - <link rel="stylesheet" href="/css/custom.css">
+
+# --- 图片放大预览功能 ---
+# 开启后，点击文章中的图片可以放大
+lightbox: fancybox
